--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>New Year Timer</title>
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="new-year-timer.png" type="image/x-icon">
